<resources>
    <string name="app_name">MoveMate</string>
    <string name="username">Нікнейм</string>
    <string name="email">Емейл</string>
    <string name="light1">Випади</string>
    <string name="light1des">Виконайте по 15 повторень та перейдіть до наступного за допомогою кнопки нижче</string>
    <string name="pwrdy">powered by y0daaa</string>
    <string name="light2">Велосипед</string>
    <string name="brnclr">Статистика втрачених калорій</string>
    <string name="date">Дата</string>
    <string name="clrs">Калорії</string>
    <string name="usr">Імʼя</string>
    <string name="light2des">Виконуйте не поспішаючи 2 хвилини як зображено на відео та натисніть кнопку нижче</string>
    <string name="phonenmb">+380 73 194 64 09</string>
    <string name="password">Пароль</string>
    <string name="sign_up">Зареєструвати аккаунт</string>
    <string name="login">Логін</string>
    <string name="age">Вік</string>
    <string name="height">Зріст</string>
    <string name="weight">Вага</string>
    <string name="logout">Вийти</string>
    <string name="sign_in">Увійти</string>
    <string name="help">Допомога</string>
    <string name="nextex">Наступна вправа</string>
    <string name="squats">Присідання</string>
    <string name="hard1">Вправа на поясницю</string>
    <string name="hard1des">Зафіксуйте положення тіла як на відео, виконайте 3 підходи по 12 повторів, коли відчуваєте занадто легко візьміть в руки блін від штанги</string>
    <string name="hard2">Тяга гантелі на спину</string>
    <string name="hard2des">Візьміть підходящі гантелі, тримайте спину рівно, 4 підходи з зростаючою вагою на 12 повторів</string>
    <string name="hard3">Вертикальний блок</string>
    <string name="hard3des">В показаній вище вправі, головне зробити правильний хват та тримати спину рівно, 4 підходи 12 повторів, правильно вибирайте вагу</string>
    <string name="hard4">Французький жим</string>
    <string name="hard4des">Гантелі повільно опускайте до голови, лікті потрібно тримати з углом всередину і зафіксувати в одному місті, 3 підходи 8 повторів</string>
    <string name="hard5">Відтискання на брусах</string>
    <string name="hard5des">Останню вправу за технікою уазаною вище, до відказу, якщо занадто легко повісити бліни на спеціальний пояс</string>
    <string name="mediumfirst">Молотки</string>
    <string name="mediumthird">Махи гантелями сидя</string>
    <string name="mediumthirddes">Угол лавки повинен бути 80° не нахиляйте руки занадто низько, виконати 3 підходи по 12 повторів</string>
    <string name="mediumsecond">Махи гантелями</string>
    <string name="mediumseconddes">Розмістіть лавку горизонтально та виконайте 3 підходи по 12 повторень з підходящими вагами</string>
    <string name="mediumfirstdes">Виберіть гантелі з зручною вагою для того аби зробити 3 підходи по 12 повторень, локті повинні залишатися на місці</string>
    <string name="squatsdes">Виконайте 15 повторень, правильно контролюючи дихання та натисніть кнопку нижче</string>
    <string name="help2">Для звʼязку з нами використовуйте посилання нижче</string>
    <string name="light">Легке тренування</string>
    <string name="finishtrn">Закінчити тренування</string>
    <string name="medium">Тренування середньої важкості</string>
    <string name="hard">Тяжке тренування</string>
    <string-array name="time_period_array">
        <item>Last 7 days</item>
        <item>Last 30 days</item>
        <item>Last 6 months</item>
        <item>Last year</item>
    </string-array>
    <string name="choose_training">Як ви сьогодні почуваєтесь? Виберіть тренування </string>
    <string name="warning">Важливо! Не зважаючи на вибрану інтенсивність тренування, потрібно обовʼязково зробити розминку перед ним для запобігання шкоди вашому організму!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="emailfb">kuzma.yurii@student.uzhnu.edu.ua</string>
</resources>