<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gunmetal"
    tools:context=".ui.signin.SignInFragment">


    <ImageView
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:contentDescription="@string/app_name"
        android:id="@+id/main_label_png"
        android:src="@drawable/main_label"
        android:layout_marginTop="140dp"
        android:layout_gravity="center" />

    <EditText
        android:id="@+id/et_username"
        android:layout_marginTop="30dp"
        android:inputType="text"
        android:autofillHints="username"
        android:backgroundTint="@color/dark_coral"
        android:textColorHint="@color/silver"
        android:textColor="@color/white"
        android:fontFamily="@font/fixel_text"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/et_password"
        android:autofillHints="password"
        android:textColorHint="@color/silver"
        android:textColor="@color/white"
        android:backgroundTint="@color/dark_coral"
        android:fontFamily="@font/fixel_text"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password" />

    <Button
        android:id="@+id/btn_sign_in"
        android:textColor="@color/white"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/coral"
        android:fontFamily="@font/fixel_text"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:layout_height="wrap_content"
        android:text="@string/sign_in" />

    <Button
        android:id="@+id/tv_sign_up"
        android:textColor="@color/white"
        android:fontFamily="@font/fixel_text"
        android:layout_width="300dp"
        android:backgroundTint="@color/dark_coral"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:text="@string/sign_up" />

    <Button
        android:id="@+id/btn_feedback"
        android:textColor="@color/white"
        android:backgroundTint="@color/coral"
        android:fontFamily="@font/fixel_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="160dp"
        android:text="@string/help" />



</LinearLayout>