<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gunmetal"
    tools:context=".ui.signup.SingUpFragment">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="70dp"
        android:id="@+id/main_label_png"
        android:src="@drawable/main_label"
        android:layout_gravity="center" />

    <EditText
        android:id="@+id/et_username"
        android:layout_marginTop="30dp"
        android:inputType="text"
        android:autofillHints="username"
        android:backgroundTint="@color/dark_coral"
        android:textColorHint="@color/silver"
        android:textColor="@color/white"
        android:fontFamily="@font/athiti_semibold"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/et_email"
        android:autofillHints="emailAddress"
        android:layout_gravity="center"
        android:backgroundTint="@color/dark_coral"
        android:layout_width="300dp"
        android:textColorHint="@color/silver"
        android:fontFamily="@font/athiti_semibold"
        android:layout_height="wrap_content"
        android:textColor="@color/silver"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/et_password"
        android:autofillHints="password"
        android:textColorHint="@color/silver"
        android:textColor="@color/white"
        android:backgroundTint="@color/dark_coral"
        android:fontFamily="@font/athiti_semibold"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password" />

    <EditText
        android:id="@+id/et_age"
        android:textColorHint="@color/silver"
        android:fontFamily="@font/athiti_semibold"
        android:layout_width="300dp"
        android:backgroundTint="@color/dark_coral"
        android:layout_gravity="center"
        android:textColor="@color/silver"
        android:inputType="number"
        android:layout_height="wrap_content"
        android:hint="@string/age" />

    <EditText
        android:id="@+id/et_height"
        android:textColorHint="@color/silver"
        android:textColor="@color/silver"
        android:fontFamily="@font/athiti_semibold"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/dark_coral"
        android:inputType="number"
        android:layout_height="wrap_content"
        android:hint="@string/height" />

    <EditText
        android:id="@+id/et_weight"
        android:layout_width="300dp"
        android:backgroundTint="@color/dark_coral"
        android:layout_gravity="center"
        android:textColorHint="@color/silver"
        android:fontFamily="@font/athiti_semibold"
        android:layout_height="wrap_content"
        android:inputType="number"

        android:textColor="@color/silver"
        android:hint="@string/weight" />

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/coral"
        android:fontFamily="@font/athiti_semibold"
        android:layout_height="wrap_content"
        android:text="@string/sign_up" />

    <Button
        android:id="@+id/goto_sign_in"
        android:text="I already have account"
        android:textColor="@color/white"
        android:fontFamily="@font/athiti_semibold"
        android:layout_gravity="center"
        android:backgroundTint="@color/dark_coral"
        android:textSize="18sp"
        android:layout_width="300dp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_feedback_sign_up"
        android:textColor="@color/white"
        android:fontFamily="@font/athiti_semibold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:backgroundTint="@color/coral"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:text="@string/help" />



</LinearLayout>