<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gunmetal"
    tools:context=".ui.hard.HardFifthFragment">

    <pl.droidsonroids.gif.GifImageView
        android:layout_width="match_parent"
        android:layout_height="470dp"
        android:src="@drawable/hard5" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="470dp"
        android:fontFamily="@font/fixel_text"
        android:text="@string/hard5"
        android:textColor="@color/white"
        android:textSize="34sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="510dp"
        android:layout_marginStart="10dp"
        android:layout_height="wrap_content"
        android:textColor="@color/silver"
        android:textSize="28sp"
        android:fontFamily="@font/fixel_text"
        android:text="@string/hard5des"/>

    <Button
        android:id="@+id/hard_end"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginTop="650dp"
        android:backgroundTint="@color/dark_coral"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/fixel_text"
        android:textSize="18sp"
        android:text="@string/finishtrn"
        android:layout_gravity="end"/>




</FrameLayout>