<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gunmetal"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/choose_training"
        android:textSize="22sp"
        android:textColor="@color/silver"
        android:fontFamily="@font/athiti_semibold"
        android:layout_marginTop="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="40dp"/>


    <TextView
        android:id="@+id/light_tablet"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/light"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:padding="5dp"
        android:fontFamily="@font/athiti_semibold"
        android:background="@drawable/backgrounds"/>

    <TextView
        android:id="@+id/medium_tablet"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/medium"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:padding="5dp"
        android:fontFamily="@font/athiti_semibold"
        android:background="@drawable/background2"/>

    <TextView
        android:id="@+id/hard_tablet"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/hard"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:padding="5dp"
        android:fontFamily="@font/athiti_semibold"
        android:background="@drawable/background3"/>


</LinearLayout>
